# smolgp

./: .gitignore  .readthedocs.yaml  CITATION.cff  LICENSE  README.md  pyproject.toml
.github/workflows/: pypi-publish.yml  python-publish.yml  tests.yml
docs/: benchmarks.md  citing.md  conf.py  guide.md  index.md  index.rst  install.md  releasenotes.md  tutorials.md
docs/tutorials/: derivative.ipynb  integrated.ipynb  introssm.ipynb  kernels.ipynb  multicomponent.ipynb  parallel.ipynb  quickstart.ipynb
src/smolgp/: __init__.py  gp.py  helpers.py
src/smolgp/kernels/: __init__.py  base.py  dense.py  integrated.py
src/smolgp/solvers/: __init__.py  kalman.py  rts.py  solver.py
src/smolgp/solvers/integrated/: __init__.py  kalman.py  rts.py  solver.py
src/smolgp/solvers/integrated/parallel/: kalman.py  rts.py  solver.py
src/smolgp/solvers/parallel/: kalman.py  rts.py  solver.py
src/ssmolgp/: __init__.py  gp.py
src/ssmolgp.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/ssmolgp/kernels/: __init__.py  base.py  integrated.py  quasisep.py  stationary.py
src/ssmolgp/solvers/: __init__.py  kalman.py  rts.py  solver.py  statespace.py
src/ssmolgp/solvers/integrated/: __init__.py  kalman.py  solver.py
src/ssmolgp/solvers/parallel/: kalman.py  rts.py  solver.py
tests/: benchmark.py  integrated-proof.ipynb  test_integrated.py  test_kernels.py  test_multicomponent.py  test_parallel.py  test_proofs.py  testgp.py  testing-benchmark.ipynb  testing-integrated.ipynb  testing-kernels.ipynb  testing-multicomponent.ipynb  testing.ipynb  utils.py
tests/benchmark/: benchmark.py  funcs.py  kernels.py  plotting.py  run_benchmark.py  testing-benchmark.ipynb
