[project]
name = "ssmolgp"
version = "0.0.1"
description = "Gaussian Process State Space Models in Python/JAX"
authors = [{ name = "Ryan Rubenzahl", email = "rrubenzahl@gmail.com" },
           { name = "Soichiro Hattori", email = "soichiro.hattori@gmail.com"}]
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
]
dependencies = [
    "equinox>=0.13.1",
    "jax>=0.6.2",
    "tinygp>=0.3.0",
]

[dependency-groups]
dev = [
    "jupyter>=1.1.1",
    "matplotlib>=3.10.6",
]
