[project]
name = "smolgp"
version = "0.0.1"
description = "Gaussian Process State Space Models in Python/JAX"
authors = [{ name = "Ryan Rubenzahl", email = "rrubenzahl@gmail.com" },
           { name = "Soichiro Hattori", email = "soichiro.hattori@gmail.com"}]
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
]
dependencies = [
    "equinox>=0.13.1",
    "jax>=0.6.2",
    "tinygp>=0.3.0",
]

[dependency-groups]
dev = [
    "astropy>=6.1.7",
    "jupyter>=1.1.1",
    "matplotlib>=3.10.6",
]
cuda12 = ["jax[cuda12]"]
cuda13 = ["jax[cuda13]"]
docs = [
    "sphinx>=8.1.3",
    "sphinx-rtd-theme>=3.0.2",
]

[tool.uv]
conflicts = [
    [
    {group = "cuda12"}, 
    {group = "cuda13"}
    ]
]

[project.urls]
Homepage = "https://github.com/smolgp-dev/smolgp"
Issues = "https://github.com/smolgp-dev/smolgp/issues"

[build-system]
requires = ["setuptools >= 77.0.3"]
build-backend = "setuptools.build_meta"

[tool.uv.sources]
tinygp = { git = "https://github.com/dfm/tinygp" }

[tool.ruff]
ignore = ["E731", # lambda functions
          "E741", # ambiguous variable names (e.g. I)
          "E743", # ambiguous function names (e.g. I)
         ]
