[project]
name = "smolgp"
version = "0.1.0"
description = "Gaussian Process State Space Models in Python/JAX"
authors = [{ name = "Ryan Rubenzahl", email = "rrubenzahl@gmail.com" },
           { name = "Soichiro Hattori", email = "soichiro.hattori@gmail.com"}]
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
]
dependencies = [
    "equinox>=0.13.1",
    "jax>=0.6.2",
    "tinygp>=0.3.0",
]

# Dependency groups are for development, testing, documentation, etc.
[dependency-groups]
dev = [
    "astropy>=6.1.7",
    "jupyter>=1.1.1",
    "matplotlib>=3.10.6",
]
test = ["pytest", "pytest-xdist", "pytest-cov"]
docs = [
    "myst-nb",
    "myst-parser>=4.0.1",
    "sphinx>=8.1.3",
    "sphinx-autoapi>=3.6.1",
    "sphinx-book-theme",
    "sphinx-design",
    "sphinx-togglebutton",
    "sphinxcontrib-lightbox2",
    "matplotlib",
#    "numpyro",
#    "jaxopt",
]
cuda = ["jax[cuda12]"] # for benchmarking on GPU

# Optional dependencies are for extra functionality users may want
[project.optional-dependencies]
cuda12 = ["jax[cuda12]"]
cuda13 = ["jax[cuda13]"]

[tool.uv]
conflicts = [
    [
    {group = "cuda12"}, 
    {group = "cuda13"}
    ]
]

[build-system]
requires = ["hatchling >= 1.26"]
build-backend = "hatchling.build"

[tool.uv.sources]
tinygp = { git = "https://github.com/dfm/tinygp" }

[project.urls]
Homepage = "https://github.com/smolgp-dev/smolgp"
Issues = "https://github.com/smolgp-dev/smolgp/issues"

[tool.ruff]
ignore = ["E731", # lambda functions
          "E741", # ambiguous variable names (e.g. I)
          "E743", # ambiguous function names (e.g. I)
         ]
